...
            </objects>
            <point key="canvasLocation" x="1698.4000000000001" y="202.84857571214394"/>
        </scene>
        <!--User Photos-->
        <scene sceneID="lZz-jz-04X">
            <objects>
                <viewController title="User Photos" automaticallyAdjustsScrollViewInsets="NO" id="m8k-r5-h2o" customClass="UserPhotosViewController" customModule="JanePhotoScroller" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="pec-8S-3nE">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <searchBar contentMode="redraw" placeholder="Enter Flickr Username" translatesAutoresizingMaskIntoConstraints="NO" id="LU9-46-Mrj">
                                <rect key="frame" x="0.0" y="64" width="375" height="56"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartQuotesType="no"/>
                                <connections>
                                    <outlet property="delegate" destination="m8k-r5-h2o" id="k78-cY-Sp7"/>
                                </connections>
                            </searchBar>
...
