...
            failure: { nsError in
                self.mainActivityIndicator.stopAnimating()
                self.isGettingMorePhotos = false
                self.currentBatchResultCount = 0
                
                print(nsError)
                simpleAlert(vc: self, title: NSLocalizedString("Error", comment: "Alert title"), message: nsError.localizedDescription, ackStr: NSLocalizedString("OK", comment: "Alert button"))                
            },
            success : { photos in
                self.mainActivityIndicator.stopAnimating()
                self.isGettingMorePhotos = false
                self.currentBatchResultCount = photos.count
                self.dataSource.append(contentsOf: photos)
...
